--- a/app/blog/other/readme.mdx
+++ b/app/blog/other/readme.mdx
@@ -26,7 +26,7 @@ import Underline from '@/components/underline'
   import VueCompositionAPI from "@vue/composition-api";
   
   Vue.use(VueCompositionAPI);
-   Vue({
+  new Vue({
     render: (h) => h(App),
   }).$mount("#app");
   
