[docs] 修改错别字

--- a/app/blog/others/readme.mdx
+++ b/app/blog/others/readme.mdx
@@ -16,7 +16,7 @@ import Underline from '@/components/underline'
 记录在vue2.6.14(composition api)使用vuecli 打包出来的commonjs模式的库报错的排查过程，并找到解决方案
 
 
-报错`Error: [vue-composition-api] must call Vue.use(VueCompositionAPI) before using any functio`
+报错`Error: [vue-composition-api] must call Vue.use(VueCompositionAPI) before using any function`
 ### 1、客户端
 - 1、main.js
 
