[docs] 补充 this reamde

--- a/app/blog/javascript/this/readme.mdx
+++ b/app/blog/javascript/this/readme.mdx
@@ -1,6 +1,6 @@
 # this 笔记
 
-根据`《你不知道的JavaScript（上卷）》`进行了简单的总结
+根据`《你不知道的JavaScript（上卷）》`关于this的章节，进行了简单的总结
 
 重点：判断一个运行中函数的 this 绑定，就需要找到这个函数的直接调用位置，`即this只能在调用时确定`
 
