[style] 使用prettier格式化代码

--- a/app/blog/docker/nginx-app/readme.mdx
+++ b/app/blog/docker/nginx-app/readme.mdx
@@ -3,7 +3,7 @@ import Underline from '@/components/underline'
 
 # 使用 docker 部署 nginx 应用
 
-<div className="flex">
+<div className='flex'>
   <span>
     <Underline>
       <a href='https://github.com/linzhe141/blog/tree/main/app/blog/docker/nginx-app'>
