[style] 使用`prettier`格式化

--- a/app/blog/vue/mini_vue_principle/readme.mdx
+++ b/app/blog/vue/mini_vue_principle/readme.mdx
@@ -3,60 +3,78 @@ import Underline from '@/components/underline'
 
 # 手写vue响应式原理，及其router和vuex的原理
 
-<div className='flex mb-4 ml-4'>
+<div className='mb-4 ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/vue2-reactive-ts#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/vue2-reactive-ts#readme'
+      >
         <span>1、手写 vue2 响应式原理</span>
       </a>
     </Underline>
   </span>
 </div>
 
-<div className='flex mb-4 ml-4'>
+<div className='mb-4 ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/vue3-reactive-ts#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/vue3-reactive-ts#readme'
+      >
         <span>2、手写 vue3 响应式原理</span>
       </a>
     </Underline>
   </span>
 </div>
 
-<div className='flex mb-4 ml-4'>
+<div className='mb-4 ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/mini-vue3-vue-router#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/mini-vue3-vue-router#readme'
+      >
         <span>3、手写 mini-vue3-vue-router(vue-router@4)</span>
       </a>
     </Underline>
   </span>
 </div>
 
-<div className='flex mb-4 ml-4'>
+<div className='mb-4 ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/mini-vue3-vuex#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/mini-vue3-vuex#readme'
+      >
         <span>4、手写 mini-vue3-vuex(vuex@4)</span>
       </a>
     </Underline>
   </span>
 </div>
 
-<div className='flex mb-4 ml-4'>
+<div className='mb-4 ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/mini-vue2-vue-router#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/mini-vue2-vue-router#readme'
+      >
         <span>5、手写 mini-vue2-vue-router(vue-router@3)</span>
       </a>
     </Underline>
   </span>
 </div>
 
-<div className='flex ml-4'>
+<div className='ml-4 flex'>
   <span>
     <Underline>
-      <a className='no-underline' href='https://github.com/linzhe141/mini-vue2-vuex#readme'>
+      <a
+        className='no-underline'
+        href='https://github.com/linzhe141/mini-vue2-vuex#readme'
+      >
         <span>6、手写 mini-vue2-vuex(vuex@3)</span>
       </a>
     </Underline>
