[feat] 新增笔记 `在vue3中使用ref作为reactive作为参数`

--- a/app/blog/others/vue_issues_1/readme.mdx
+++ b/app/blog/others/vue_issues_1/readme.mdx
@@ -1,7 +1,7 @@
 import React from 'react'
 import Underline from '@/components/underline'
 
-# vue2.6.14(composition api)使用vuecli 打包出来的commonjs模式的库报错
+# vue2.6.14(composition api)使用vuecli 打包出来的commonjs模式的库报错的解决方案
 
 <div className='flex'>
   <span>
