--- a/app/blog/vue/mini_vue_principle/readme.mdx
+++ b/app/blog/vue/mini_vue_principle/readme.mdx
@@ -1,7 +1,9 @@
 import React from 'react'
 import Underline from '@/components/underline'
 
-# 手写vue响应式原理，及其router和vuex的原理
+# 手写mini-vue系列
+
+为了更深入地了解 Vue 相关的原理，实现了 mini 系列的Vue 2 和 Vue 3 的响应式原理，及其对应的 mini 版 Vuex 和 Vue Router。
 
 <div className='mb-4 ml-4 flex'>
   <span>
