[docs] 修改vue3_reactive_use_ref文档

--- a/app/blog/vue/vue3_reactive_use_ref/readme.mdx
+++ b/app/blog/vue/vue3_reactive_use_ref/readme.mdx
@@ -51,7 +51,7 @@ function createReactiveObject(
     }
     return target
   }
-  // 跳过,不是reactive,没有这些属性
+  // 跳过，不是reactive或ractive的代理，没有这些属性
   if (target['__v_raw'] && !(isReadonly2 && target['__v_isReactive'])) {
     return target
   }
