[docs] 修改错别字

--- a/app/blog/vue/vue3_reactive_use_ref/readme.mdx
+++ b/app/blog/vue/vue3_reactive_use_ref/readme.mdx
@@ -75,7 +75,7 @@ function createReactiveObject(
   //!   path: string;
   //! }>
 
-  //! 类别
+  //! 简单流程
   //! var refValue = {__v_is_ref: true, value: new Proxy({value: {path:'test'},{})}
   //! var reactiveValue = new Proxy(refValue, {})
   //! reactiveValue.value === refValue.value // true
