--- a/app/blog/vue/debug_vue_source_code/readme.mdx
+++ b/app/blog/vue/debug_vue_source_code/readme.mdx
@@ -105,7 +105,7 @@ import Image from 'next/image'
   })
   ```
 
-  使用vitest插件后，按照下图操作即可进行debug
+  使用[vitest(ide文档)](https://cn.vitest.dev/guide/ide.html)插件后，按照下图操作即可进行debug
 
   <Image
     width={700}
