--- a/app/blog/docker/readme.mdx
+++ b/app/blog/docker/readme.mdx
@@ -13,20 +13,19 @@
 
   example: `docker load -i /test/myNginx.tar`
 
-- `docker build -f dockerfile文件路径 -t 镜像名称:版本 #使用dockerfile制作镜像，默认使用当前目录的dockerfile`
+- `docker build -f dockerfile文件路径 -t 镜像名称:版本 . #使用dockerfile制作镜像，默认使用当前目录的dockerfile`
 
 ### 2、容器操作
 
 - `docker ps # 查看启动运行的容器`
 - `docker ps -a # 查看所有的容器`
-
 - `docker rm 容器名(或容器id) # 删除容器`
 - `docker start 容器名(或容器id) # 启动容器`
 - `docker stop 容器名(或容器id) # 停止容器`
 - `docker restart 容器名(或容器id) # 重启容器`
 - `docker run [OPTIONS] IMAGE [COMMAND] [ARG...] # 根据镜像运行容器`
 
-  - example：`docker run --name nginx-test -p 8080:80 -d nginx`
+  - example：`docker run --name nginx-test -p 8080:80 -d nginx`，`docker run --name nginx-test -p 8080:80 -it nginx bash`
   - `-it`
 
     一般一起使用,-i 选项指示 docker 要在容器上打开一个标准的输入接口，-t 指示 docker 要创建一个伪 tty 终端，连接容器的标准输入接口，之后用户就可以通过终端进行输入。
