docs: 笔记子标题使用纯文本

--- a/app/blog/docker/nginx-app/readme.mdx
+++ b/app/blog/docker/nginx-app/readme.mdx
@@ -13,7 +13,7 @@ import Underline from '@/components/underline'
   </span>
 </div>
 
-### 1、使用 `dockerfile` 制作镜像
+### 1、使用dockerfile制作镜像
 
 #### webapp
 
@@ -89,7 +89,7 @@ RUN npm install
 CMD ["npm", "start"]
 ```
 
-### 2、使用 `dockder compose` 管理容器
+### 2、使用dockder compose管理容器
 
 ```yml
 version: '3'
