--- a/app/blog/docker/readme.mdx
+++ b/app/blog/docker/readme.mdx
@@ -2,28 +2,28 @@
 
 ### 1、镜像操作
 
-- `docker pull 镜像名:版本 #拉取镜像`
-- `docker rmi 镜像名:版本(或镜像id) # 删除镜像`
-- `docker commit 容器id 镜像名称:版本号 # 将容器制作成镜像`
-- `docker save 镜像名(或镜像id) -o 镜像保存目录 # 保存镜像`
+- `docker pull 镜像名:版本 ` 拉取镜像
+- `docker rmi 镜像名:版本(或镜像id) ` 删除镜像
+- `docker commit 容器id 镜像名称:版本号 ` 将容器制作成镜像
+- `docker save 镜像名(或镜像id) -o 镜像保存目录 ` 保存镜像
 
   example: `docker save nginx -o /test/myNginx.tar`
 
-- `docker load -i 镜像保存目录 # 加载镜像`
+- `docker load -i 镜像保存目录 ` 加载镜像
 
   example: `docker load -i /test/myNginx.tar`
 
-- `docker build -f dockerfile文件路径 -t 镜像名称:版本 . #使用dockerfile制作镜像，默认使用当前目录的dockerfile`
+- `docker build -f dockerfile文件路径 -t 镜像名称:版本 . ` 使用dockerfile制作镜像，默认使用当前目录的dockerfile，主要后面还跟了一个`“.”`
 
 ### 2、容器操作
 
-- `docker ps # 查看启动运行的容器`
-- `docker ps -a # 查看所有的容器`
-- `docker rm 容器名(或容器id) # 删除容器`
-- `docker start 容器名(或容器id) # 启动容器`
-- `docker stop 容器名(或容器id) # 停止容器`
-- `docker restart 容器名(或容器id) # 重启容器`
-- `docker run [OPTIONS] IMAGE [COMMAND] [ARG...] # 根据镜像运行容器`
+- `docker ps ` 查看启动运行的容器
+- `docker ps -a ` 查看所有的容器
+- `docker rm 容器名(或容器id) ` 删除容器
+- `docker start 容器名(或容器id) ` 启动容器
+- `docker stop 容器名(或容器id) ` 停止容器
+- `docker restart 容器名(或容器id) ` 重启容器
+- `docker run [OPTIONS] IMAGE [COMMAND] [ARG...] ` 根据镜像运行容器
 
   - example：`docker run --name nginx-test -p 8080:80 -d nginx`，`docker run --name nginx-test -p 8080:80 -it nginx bash`
   - `-it`
@@ -46,14 +46,13 @@
 
     挂载目录(数据卷)，做数据持久化，将容器中的数据持久化到宿主机中,可以进行多个数据卷挂载
 
-- `docker exec -it 容器名(或容器id) /bin/bash # 进入容器`
+- `docker exec -it 容器名(或容器id) /bin/bash ` 进入容器
 
   输入`exit` 退出容器；如果运行容器时没有使用`-d`，那么退出时，容器也会关闭
 
 ### 3、docker-compose 操作
 
-- `docker-compose build #(可选)构建镜像`
-- `docker-compose up #前台启动相关容器`
-- `docker-compose up -d #后台启动相关容器`
-- `docker-compose stop  #关闭相关容器`
-- `docker-compose stop  #关闭并删除相关容器`
+- `docker-compose build ` (可选)构建镜像
+- `docker-compose up ` 前台启动相关容器
+- `docker-compose up -d ` 后台启动相关容器
+- `docker-compose stop ` 关闭相关容器
