docs: 修改错别字

--- a/app/blog/docker/readme.mdx
+++ b/app/blog/docker/readme.mdx
@@ -13,7 +13,7 @@
 
   example: `docker load -i /test/myNginx.tar`
 
-- `docker build -f dockerfile文件路径 -t 镜像名称:版本 . ` 使用dockerfile制作镜像，默认使用当前目录的dockerfile，主要后面还跟了一个`“.”`
+- `docker build -f dockerfile文件路径 -t 镜像名称:版本 . ` 使用dockerfile制作镜像，默认使用当前目录的dockerfile，注意后面还跟了一个`“.”`
 
 ### 2、容器操作
 
