docs: 补充《jsx本质》笔记

--- a/app/blog/javascript/jsx/readme.mdx
+++ b/app/blog/javascript/jsx/readme.mdx
@@ -1,8 +1,8 @@
 # jsx本质
 
 `jsx`是JavaScript的一个类似XML的扩展，虽然最早是由react提出的，但实际上 JSX 语法并没有定义运行时语义，
-并且能被编译成各种不同的输出形式，`jsx`可以由很多工具进行转换为`js`，比如`Babel`和`TypeScript`，
-接下来就通过babel和ts创建属于自己的jsx
+并且能被编译成[各种不同的输出形式](https://cn.vuejs.org/guide/extras/render-function.html#jsx-tsx)，
+`jsx`可以由很多工具进行转换为`js`，比如`Babel`和`TypeScript`，接下来就通过babel和ts创建属于自己的jsx
 
 <div className='flex'>
   <span>
@@ -77,7 +77,7 @@ pnpm i -D typescript
 
 ### 2、通过Babel插件转换成自定义的jsx
 
-参考`react`比如有这么一个函数`Dom`，用来创建属于自己的虚拟节点
+参考`react.createElement`，假设存在一个函数`Dom`，用来创建属于自己的虚拟节点
 
 ```ts
 function Dom(tagName: string, props: Record<string, any>, ...children: CustomVNode[]): CustomVNode{
@@ -91,7 +91,7 @@ function Dom(tagName: string, props: Record<string, any>, ...children: CustomVNo
 pnpm i -D @babel/cli @babel/core @babel/plugin-syntax-jsx
 ```
 
-- 编写自定义的babel插件
+- [编写自定义的babel插件](https://juejin.cn/post/6918555538628280333)
 
   ```js
   // custom-plugin.js
@@ -114,10 +114,10 @@ pnpm i -D @babel/cli @babel/core @babel/plugin-syntax-jsx
             )
             return result
           }, [])
-          const creaateIdentifier = t.identifier('Dom')
-          // 生成Dom('div', {class:'xxx'}, '123')
+          const createIdentifier = t.identifier('Dom')
           const args = [t.stringLiteral(tagName), t.objectExpression(propsList)]
-          const callRCExpression = t.callExpression(creaateIdentifier, args)
+          // Dom('div', {class:'xxx',id: 'test'})
+          const callRCExpression = t.callExpression(createIdentifier, args)
           callRCExpression.arguments = callRCExpression.arguments.concat(
             path.node.children
           )
@@ -142,7 +142,7 @@ pnpm i -D @babel/cli @babel/core @babel/plugin-syntax-jsx
   }
   ```
 
-- 对ts编译的产物，再次进行转换，就可以得到自定义得jsx产物了
+- 对ts编译后的产物，再次进行转换，就可以得到自定义的jsx了
 
   ```bash
   npx babel dist/input.jsx --out-file dist/output.js
