feat: mdx代码块新增`copy`和`filename`

--- a/app/blog/css/property-animation/readme.mdx
+++ b/app/blog/css/property-animation/readme.mdx
@@ -2,7 +2,7 @@
 
 ### 1、定义属性名
 
-```css
+```css filename="style.css"
 @property --gradient-end {
   syntax: '<percentage>';
   initial-value: 10%;
@@ -12,7 +12,7 @@
 
 ### 2、编写动画
 
-```css
+```css filename="style.css"
 /* 抛光动画 */
 @keyframes gradientAnimation {
   0% {
