--- a/app/blog/vue/vue3-reactive-use-ref/readme.mdx
+++ b/app/blog/vue/vue3-reactive-use-ref/readme.mdx
@@ -12,7 +12,7 @@ const reactiveValue = reactive(refValue)
 
 ### 1、App.vue
 
-```html
+```html filename="App.vue"
 <template>
   <div>{{ reactiveValue.path }}</div>
 </template>
