--- a/app/blog/data-structure/tree-traversal/readme.mdx
+++ b/app/blog/data-structure/tree-traversal/readme.mdx
@@ -14,7 +14,7 @@
 //  2    3
 ```
 
-```ts
+```ts filename="index.ts"
 function preorderTraversal(root: TreeNode | null): number[] {
   if (!root) return []
   return dfs(root)
@@ -40,7 +40,7 @@ function dfs(node: TreeNode, result: number[] = []) {
 //  2    3
 ```
 
-```ts
+```ts filename="index.ts"
 function inorderTraversal(root: TreeNode | null): number[] {
   if (!root) return []
   return dfs(root)
@@ -66,7 +66,7 @@ function dfs(node: TreeNode, result: number[] = []) {
 //  2    3
 ```
 
-```ts
+```ts filename="index.ts"
 function postorderTraversal(root: TreeNode | null): number[] {
   if (!root) return []
   return dfs(root)
