--- a/app/blog/css/property-animation/readme.mdx
+++ b/app/blog/css/property-animation/readme.mdx
@@ -39,4 +39,4 @@
 
 ### 3、动画效果如下
 
-<div className={`gradient mt-2 h-2 w-[400px]`}></div>
+<div className={`gradient mt-2 h-2 max-w-[400px]`}></div>
