docs: 补充《回溯算法》笔记

--- a/app/blog/algorithm/backtracking/readme.mdx
+++ b/app/blog/algorithm/backtracking/readme.mdx
@@ -3,6 +3,8 @@
 `回溯算法`是一种通过穷举来解决问题的方法，它的核心思想是从一个初始状态出发，暴力搜索所有可能的解决方案，
 当遇到正确的解则将其记录，直到找到解或者尝试了所有可能的选择都无法找到解为止。
 
+回溯和普通递归的联系：回溯知道路径(递归与递归直接的状态)，普通递归不关心路径(递归递归之间的关联状态)
+
 ### 1、排列问题
 
 [leetcode-46:](https://leetcode.cn/problems/permutations/)
