--- a/app/blog/git/git-rebase-resolved-conflict/readme.mdx
+++ b/app/blog/git/git-rebase-resolved-conflict/readme.mdx
@@ -82,3 +82,10 @@ git rebase --continue
 git checkout master
 git merge feat_bar #将feat_bar分支的更改合并到当前分支（master）
 ```
+
+<span className='flex items-center'>
+  🈲
+  <span className='ml-1 text-xs text-red-500'>
+    永远不要在公共分支上使用 rebase !因为会修改commit 记录
+  </span>
+</span>
