feat: mdx新增`tips`模板

--- a/app/blog/git/git-rebase-resolved-conflict/readme.mdx
+++ b/app/blog/git/git-rebase-resolved-conflict/readme.mdx
@@ -83,9 +83,12 @@ git checkout master
 git merge feat_bar #将feat_bar分支的更改合并到当前分支（master）
 ```
 
-<span className='flex items-center'>
-  🈲
-  <span className='ml-1 text-xs text-red-500'>
-    永远不要在公共分支上使用 rebase !因为会修改commit 记录
-  </span>
-</span>
+<div className='tips-wrapper rounded bg-[#e9eaff] p-2'>
+  <div className='font-semibold text-black'>tips</div>
+  <div className='flex items-center'>
+    🈲
+    <span className='ml-1 text-xs text-red-500'>
+      永远不要在公共分支上使用 rebase !因为会修改commit 记录
+    </span>
+  </div>
+</div>
