chore: 补充《github三种合并PR的方式》笔记

--- a/app/blog/git/github-the-3-ways-to-merge-pr/readme.mdx
+++ b/app/blog/git/github-the-3-ways-to-merge-pr/readme.mdx
@@ -101,13 +101,13 @@ Reviewer在合并PR时，选择`Rebase and merge`，这次github就`不会出现
 
 <div className='tips-wrapper rounded bg-[#e9eaff] p-2'>
   <div className='font-semibold text-black'>tips</div>
-  <sapn className='text-[13px] text-black'>
+  <sapn className='mb-1 text-[13px] text-black'>
     根据这三种合并策略，感觉第二种最为简单
     `推荐流程：PR的分支通过rebase合并main，然后main在通过squashand merge合并PR`
   </sapn>
   <Image
-    width={306}
-    height={219}
+    width={290}
+    height={212}
     src={'/blog/github-pr-merge-tips.jpg'}
     alt='github-pr-merge-tips'
     unoptimized
